[package]
name = "iroh-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "process"] }
axum = "0.5.1"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
mime_guess = "2.0.4"

#[dev-dependencies]
axum-macros = "0.2.0" # use #[axum_macros::debug_handler] for better error messages on handlers